# Go100x

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: BuildSettings.cmake  ClangFormat.cmake  Compilers.cmake  MacroUtilities.cmake  Options.cmake  Packages.cmake  ProjectSettings.cmake
examples/: fun.py  main.py  mult.py
extra/: dostuff.py  fillLookupTable.cu
source/: CMakeLists.txt
source/Go100x/: CMakeLists.txt  kernels.hpp  macros.hpp  profiler.hpp
source/Go100x/src/: kernels.cpp  kernels.cu
source/python/: CMakeLists.txt  go100x.cpp  go100x.hpp
tools/: gperf-cpu-profile.sh  gperf-heap-profile.sh
